--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "private": true,
   "name": "wackystonks",
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "run-client": "yarn workspace ws-client start",
+    "run-server": "yarn workspace ws-server start",
+    "start": "concurrently --kill-others-on-fail \"yarn run-server\"  \"yarn run-client\""
+  },
+  "dependencies": {
+    "concurrently": "^6.2.0"
+  }
 }
