--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -1,4 +1,22 @@
 {
   "name": "ws-server",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "description": "wacky stoncks express server",
+  "main": "src/app.ts",
+  "author": "Nicholas Chumney",
+  "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/app.ts"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.4.13",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
+  }
 }
