--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -2,11 +2,16 @@
   "name": "ws-server",
   "version": "1.0.0",
   "description": "wacky stoncks express server",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
   "author": "Nicholas Chumney",
   "license": "MIT",
   "scripts": {
+    "prestart": "yarn run build",
+    "start": "node .",
     "dev": "nodemon src/app.ts",
+    "prebuild": "yarn run lint:fix",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint ./src",
     "lint:fix": "./node_modules/.bin/eslint ./src --fix && ./node_modules/.bin/prettier --write ./src"
   },
