--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -2,13 +2,13 @@
   "name": "ws-server",
   "version": "1.0.0",
   "description": "wacky stoncks express server",
-  "main": "dist/app.js",
+  "main": "dist/index.js",
   "author": "Nicholas Chumney",
-  "license": "MIT",
+  "license": "ISC",
   "scripts": {
     "prestart": "yarn run build",
-    "start": "node .",
-    "dev": "nodemon src/app.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "prebuild": "yarn run lint:fix",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
