--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -13,14 +13,25 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint ./src",
-    "lint:fix": "./node_modules/.bin/eslint ./src --fix && ./node_modules/.bin/prettier --write ./src"
+    "lint:fix": "./node_modules/.bin/eslint ./src --fix && ./node_modules/.bin/prettier --write ./src",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "apollo-server-express": "^3.1.2",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "graphql-import-node": "^0.0.4",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.0.1",
+    "@graphql-codegen/typescript": "2.0.0",
+    "@graphql-codegen/typescript-resolvers": "2.0.0",
+    "@graphql-tools/schema": "^8.0.3",
+    "@graphql-tools/utils": "^8.0.2",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
