--- a/packages/ws-server/.env.example
+++ b/packages/ws-server/.env.example
@@ -1,2 +1,8 @@
+# node environment setting ie. 'development', 'production', etc
 NODE_ENV=
+
+# node server port
 PORT=
+
+# postgres connection uri ie. 'postgres://root:newPassword@localhost:port/dbname'
+POSTGRES_URI=
