--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -22,7 +22,9 @@
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-import-node": "^0.0.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pg": "^8.7.1",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.0.1",
@@ -33,6 +35,7 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
+    "@types/pg": "^8.6.1",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "eslint": "^7.32.0",
