--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
