--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -17,6 +17,7 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@types/validator": "^13.6.3",
     "apollo-server-express": "^3.1.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
