--- a/packages/ws-server/.env.example
+++ b/packages/ws-server/.env.example
@@ -6,3 +6,6 @@ PORT=
 
 # postgres connection uri ie. 'postgres://root:newPassword@localhost:port/dbname'
 POSTGRES_URI=
+
+# additional development settings
+ERASE_DATABASE_ON_SYNC=
