added authentication using gql

--- a/packages/ws-server/.env.example
+++ b/packages/ws-server/.env.example
@@ -4,6 +4,9 @@ NODE_ENV=
 # node server port
 PORT=
 
+# secret key
+SECRET=
+
 # postgres connection uri ie. 'postgres://root:newPassword@localhost:port/dbname'
 POSTGRES_URI=
 
