--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -6,7 +6,7 @@
   "author": "Nicholas Chumney",
   "license": "ISC",
   "scripts": {
-    "prestart": "yarn run build",
+    "prestart": "yarn codegen && yarn build",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "prebuild": "yarn run lint:fix",
@@ -17,13 +17,14 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@types/validator": "^13.6.3",
     "apollo-server-express": "^3.1.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-import-node": "^0.0.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5"
@@ -34,10 +35,13 @@
     "@graphql-codegen/typescript-resolvers": "2.0.0",
     "@graphql-tools/schema": "^8.0.3",
     "@graphql-tools/utils": "^8.0.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
     "@types/pg": "^8.6.1",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "eslint": "^7.32.0",
