--- a/packages/ws-client/.env.example
+++ b/packages/ws-client/.env.example
@@ -1,3 +1,11 @@
+# node environment setting ie. 'development', 'production', etc
 NODE_ENV=
+
+# node client port
 PORT=
+
+# disable browser opening on start
 BROWSER=none
+
+# link to Graphql server
+REACT_APP_GQL_SERVER_URI=
