--- a/packages/ws-client/package.json
+++ b/packages/ws-client/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -36,6 +37,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
