--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "pg": "^8.7.1",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.0.1",
@@ -40,6 +41,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.13",
+    "@types/socket.io": "^3.0.2",
     "@types/pg": "^8.6.1",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
