--- a/packages/ws-client/.env.example
+++ b/packages/ws-client/.env.example
@@ -7,5 +7,8 @@ PORT=
 # disable browser opening on start
 BROWSER=none
 
-# link to Graphql server
+# route to socket domain
+REACT_APP_SOCKET_URI =
+
+# route to Graphql server
 REACT_APP_GQL_SERVER_URI=
