synced .gitignore file in ws-client

--- a/packages/ws-client/tsconfig.json
+++ b/packages/ws-client/tsconfig.json
@@ -26,7 +26,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/**/*"
+    "**/*.ts",
+    "**/*.tsx",
   ],
   "exclude": [
     "node_modules",
