--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ build/Release
 node_modules/
 jspm_packages/
 
+# dependencies
+/.pnp
+.pnp.js
+
 # TypeScript v1 declaration files
 typings/
 
@@ -71,6 +75,10 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -102,3 +110,10 @@ dist
 
 # TernJS port file
 .tern-port
+
+# production
+build/
+dist/
+
+# misc
+.DS_Store
