--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ws-server",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "wacky stonks express server",
   "main": "dist/index.js",
   "author": "Nicholas Chumney",
@@ -28,7 +28,8 @@
     "lodash": "^4.17.21",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "ws-assets": "^0.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.0.1",
