--- a/packages/ws-assets/tsconfig.json
+++ b/packages/ws-assets/tsconfig.json
@@ -5,6 +5,9 @@
       "declaration": true,
       "outDir": "./dist"
     },
+    "exclude": [
+      "./node_modules"
+    ],
     "include": [
       "src/**/*"
     ]
