--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "concurrently --kill-others-on-fail \"yarn run-server\"  \"yarn run-client\""
   },
   "dependencies": {
+    "@changesets/cli": "^2.17.0",
     "concurrently": "^6.2.0"
   }
 }
