--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -9,9 +9,10 @@
     "prestart": "yarn codegen && yarn build && cp -r src/graphql/schemas dist/graphql",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "prebuild": "yarn run lint:fix",
+    "prebuild": "yarn lint:fix",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/_mocha -r ts-node/register tests/**/*.test.ts",
+    "coverage": "nyc yarn test",
     "lint": "./node_modules/.bin/eslint ./src",
     "lint:fix": "./node_modules/.bin/eslint ./src --fix && ./node_modules/.bin/prettier --write ./src",
     "codegen": "graphql-codegen --config codegen.yml"
@@ -38,6 +39,7 @@
     "@graphql-tools/schema": "^8.0.3",
     "@graphql-tools/utils": "^8.0.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.2.21",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.172",
@@ -47,10 +49,13 @@
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
+    "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "mocha": "^9.1.1",
     "nodemon": "^2.0.12",
+    "nyc": "^15.1.0",
     "prettier": "^2.3.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
