--- a/packages/ws-server/tsconfig.json
+++ b/packages/ws-server/tsconfig.json
@@ -16,5 +16,10 @@
     },
     "include": [
         "./src/**/*"
+    ],
+    "exclude": [
+        "./tests/",
+        "./node_modules/",
+        "./dist/"
     ]
 }
