--- a/packages/ws-client/package.json
+++ b/packages/ws-client/package.json
@@ -41,7 +41,8 @@
     "recharts": "^2.1.2",
     "socket.io-client": "^4.2.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "ws-assets": "^0.3.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
