--- a/packages/ws-client/.env.example
+++ b/packages/ws-client/.env.example
@@ -1,14 +1,14 @@
 # node environment setting ie. 'development', 'production', etc
 NODE_ENV=
 
-# node client port
+# node client port ie. 3000
 PORT=
 
 # disable browser opening on start
 BROWSER=none
 
-# route to socket domain
+# route to socket domain ie. http://localhost:3001/
 REACT_APP_SOCKET_URI =
 
-# route to Graphql server
+# route to Graphql server ie. http://localhost:3001/graphql/
 REACT_APP_GQL_SERVER_URI=
