--- a/packages/ws-server/.env.example
+++ b/packages/ws-server/.env.example
@@ -1,14 +1,14 @@
 # node environment setting ie. 'development', 'production', etc
 NODE_ENV=
 
-# node server port
+# node server port ie. 3001
 PORT=
 
-# secret key
+# secret key used for hashing
 SECRET=
 
 # postgres connection uri ie. 'postgres://root:newPassword@localhost:port/dbname'
 POSTGRES_URI=
 
-# additional development settings
-ERASE_DATABASE_ON_SYNC=
+# clears the database whenever the server is reloaded. For development purposes only.
+ERASE_DATABASE_ON_SYNC=false
