--- a/packages/ws-client/.env.example
+++ b/packages/ws-client/.env.example
@@ -7,8 +7,11 @@ PORT=
 # disable browser opening on start
 BROWSER=none
 
-# route to socket domain ie. http://localhost:3001/
+# domain used for link invites ie. http://localhost:3000
+REACT_APP_CLIENT_URI=
+
+# route to socket domain ie. http://localhost:3001
 REACT_APP_SOCKET_URI=
 
-# route to Graphql server ie. http://localhost:3001/graphql/
+# route to Graphql server ie. http://localhost:3001/graphql
 REACT_APP_GQL_SERVER_URI=
