--- a/packages/ws-socket-server/tsconfig.json
+++ b/packages/ws-socket-server/tsconfig.json
@@ -12,10 +12,11 @@
             "*": [
                 "node_modules/*"
             ]
-        }
+        },
+        "types": ["mocha", "node"]
     },
     "include": [
-        "./src/**/*"
+        "./src/**/*",
     ],
     "exclude": [
         "./tests/",
