--- a/packages/ws-socket-server/package.json
+++ b/packages/ws-socket-server/package.json
@@ -19,13 +19,17 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "ws-core": "^1.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.7",
     "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "chai": "^4.3.4",
