--- a/packages/ws-core/package.json
+++ b/packages/ws-core/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "chai": "^4.3.4",
