--- a/packages/ws-react-client/.eslintrc
+++ b/packages/ws-react-client/.eslintrc
@@ -1,6 +1,12 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["plugin:react/recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
+  "extends": [
+    "react-app",
+    "react-app/jest", 
+    "plugin:react/recommended", 
+    "plugin:@typescript-eslint/recommended", 
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
