--- a/packages/ws-react-client/package.json
+++ b/packages/ws-react-client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "dotenv": "^10.0.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
@@ -19,6 +20,7 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.2",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.8",
     "socket.io-client": "^4.4.1",
