--- a/packages/ws-react-client/package.json
+++ b/packages/ws-react-client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
+    "@types/uuid": "^8.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
@@ -26,6 +27,7 @@
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2",
     "ws-core": "^1.1.0"
   },
