add missing config settings

--- a/packages/ws-socket-server/.env.example
+++ b/packages/ws-socket-server/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=
 # node server port ie. 3001
 PORT=
 
-# secret key used for hashing
+# secret key used for hashing ie. asddsd2189sajskdln2
 SECRET=
 
 # postgres connection uri ie. 'postgres://root:newPassword@localhost:port/dbname'
