--- a/package.json
+++ b/package.json
@@ -5,17 +5,10 @@
     "packages/*"
   ],
   "scripts": {
-    "client": "yarn workspace ws-client serve",
-    "client:dev": "yarn workspace ws-client start",
-    "client:build": "yarn workspace ws-client build",
-    "server": "yarn workspace ws-server start",
-    "server:dev": "yarn workspace ws-server dev",
-    "server:build": "yarn workspace ws-server build",
-    "build-assets": "yarn workspace ws-assets build",
-    "build-all": "yarn build-assets && yarn client:build && yarn server:build",
-    "prestart": "yarn build-all",
-    "start": "concurrently --kill-others-on-fail  \"yarn client\" \"yarn server\"",
-    "dev": "concurrently --kill-others-on-fail \"yarn client:dev\"  \"yarn server:dev\""
+    "prestart": "yarn workspace ws-core build",
+    "start": "concurrently --kill-others-on-fail  \"yarn client:start\" \"yarn server:start\"",
+    "client:start": "yarn workspace ws-react-client serve",
+    "server:start": "yarn workspace ws-socket-server start"
   },
   "dependencies": {
     "@changesets/cli": "^2.17.0",
