--- a/packages/ws-react-client/package.json
+++ b/packages/ws-react-client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.21",
     "@types/uuid": "^8.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^8.6.0",
