--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "packages/*"
   ],
   "scripts": {
-    "prestart": "yarn workspace ws-core build",
-    "start": "concurrently --kill-others-on-fail  \"yarn client:start\" \"yarn server:start\"",
+    "prestart": "yarn build:core",
+    "start": "concurrently --kill-others-on-fail \"yarn client:start\" \"yarn server:start\"",
+    "dev": "concurrently --kill-others-on-fail \"yarn client:dev\" \"yarn server:dev\"",
+    "build:core": "yarn workspace ws-core build",
     "client:start": "yarn workspace ws-react-client serve",
-    "server:start": "yarn workspace ws-socket-server start"
+    "client:dev": "yarn workspace ws-react-client start",
+    "server:start": "yarn workspace ws-socket-server start",
+    "server:dev": "yarn workspace ws-socket-server dev"
   },
   "dependencies": {
     "@changesets/cli": "^2.17.0",
