--- a/packages/ws-core/package.json
+++ b/packages/ws-core/package.json
@@ -13,7 +13,8 @@
     "build": "tsc",
     "test": "nyc ./node_modules/.bin/_mocha -r ts-node/register tests/**/*.test.ts",
     "lint": "./node_modules/.bin/eslint ./src",
-    "lint:fix": "./node_modules/.bin/eslint ./src --fix && ./node_modules/.bin/prettier --write ./src"
+    "lint:fix": "./node_modules/.bin/eslint ./src --fix && ./node_modules/.bin/prettier --write ./src",
+    "clean": "rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {},
   "devDependencies": {
