--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "scripts": {
-    "preinstall": "yarn build:core",
+    "prestart": "yarn build:core",
     "start": "concurrently --kill-others-on-fail \"yarn client:start\" \"yarn server:start\"",
     "client:start": "yarn workspace ws-react-client serve",
     "server:start": "yarn workspace ws-socket-server start",
@@ -17,7 +17,7 @@
     "lint:client": "yarn workspace ws-react-client lint:fix",
     "lint:server": "yarn workspace ws-socket-server lint:fix",
     "build:core": "yarn workspace ws-core build",
-    "clean": "yarn clean:core && yarn clean:client && yarn clean:server",
+    "clean": "rm -rf node_modules && yarn clean:core && yarn clean:client && yarn clean:server",
     "clean:core": "yarn workspace ws-core clean",
     "clean:client": "yarn workspace ws-react-client clean",
     "clean:server": "yarn workspace ws-socket-server clean",
