--- a/packages/ws-socket-server/package.json
+++ b/packages/ws-socket-server/package.json
@@ -11,8 +11,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "test": "nyc ./node_modules/.bin/_mocha -r ts-node/register tests/**/*.test.ts --exit",
-    "lint": "./node_modules/.bin/eslint ./src",
-    "lint:fix": "./node_modules/.bin/eslint ./src --fix && ./node_modules/.bin/prettier --write ./src",
+    "lint": "./node_modules/.bin/eslint ./**/*.ts",
+    "lint:fix": "yarn lint && ./node_modules/.bin/prettier --write ./**/*.ts",
     "clean": "rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
