--- a/packages/ws-socket-server/package.json
+++ b/packages/ws-socket-server/package.json
@@ -16,33 +16,34 @@
     "clean": "rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "socket.io": "^4.4.0",
-    "socket.io-client": "^4.4.0",
-    "ws-core": "^2.4.0"
-  },
-  "devDependencies": {
     "@types/chai": "^4.3.0",
     "@types/chai-http": "^4.2.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.7",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "nyc": "^15.1.0",
-    "prettier": "^2.5.1",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "ws-core": "^2.4.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1"
   }
 }
