--- a/packages/ws-react-client/package.json
+++ b/packages/ws-react-client/package.json
@@ -3,6 +3,7 @@
   "version": "0.9.0",
   "private": true,
   "dependencies": {
+    "@chumnend/component-library": "^0.12.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
