--- a/packages/ws-react-client/.npmrc.example
+++ b/packages/ws-react-client/.npmrc.example
@@ -1,3 +1,5 @@
 registry=https://registry.yarnpkg.com/
 
 @chumnend:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=<your auth token>
+always-auth=true
