--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,15 @@ jobs:
         with:
           node-version: 14.x
 
-      - name: Log in to registry
-        # This is where you will update the PAT to GITHUB_TOKEN
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+      - name: Create .npmrc
+        run: cat .npmrc
+
+      - name: Populate .npmrc
+        run: |
+          echo "registry=https://registry.yarnpkg.com/" > .npmrc
+          echo "@chumnend:registry=https://npm.pkg.github.com" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
+          echo "always-auth=true" >> .npmrc
 
       - name: Install Dependencies
         run: yarn
