fix command to generate .npmrc

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,15 +21,13 @@ jobs:
         with:
           node-version: 14.x
 
-      - name: Create .npmrc
-        run: cat .npmrc
-
-      - name: Populate .npmrc
+      - name: Generate .npmrc
         run: |
-          echo "registry=https://registry.yarnpkg.com/" > .npmrc
-          echo "@chumnend:registry=https://npm.pkg.github.com" > .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
-          echo "always-auth=true" >> .npmrc
+          touch ./packages/ws-react-client/.npmrc
+          echo "registry=https://registry.yarnpkg.com/" >> ./packages/ws-react-client/.npmrc
+          echo "@chumnend:registry=https://npm.pkg.github.com" >> ./packages/ws-react-client/.npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ./packages/ws-react-client/.npmrc
+          echo "always-auth=true" >> ./packages/ws-react-client/.npmrc
 
       - name: Install Dependencies
         run: yarn
