--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,9 @@ jobs:
         with:
           node-version: 14.x
 
-      - name: Create .npmrc
-        run: cat .npmrc
-
-      - name: Populate .npmrc
+      - name: Generate .npmrc File
         run: |
+          touch .npmrc
           echo "registry=https://registry.yarnpkg.com/" > .npmrc
           echo "@chumnend:registry=https://npm.pkg.github.com" > .npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
