--- a/packages/ws-react-client/.eslintrc
+++ b/packages/ws-react-client/.eslintrc
@@ -1,7 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "plugin:react/recommended", 
+    "react-app", 
     "plugin:@typescript-eslint/recommended", 
     "plugin:prettier/recommended"
   ],
