--- a/packages/ws-react-client/package.json
+++ b/packages/ws-react-client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.0",
     "socket.io-client": "^4.6.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
